ヘッダー、見出しを追加

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <title>gitの練習</title>
 </head>
 <body>
-
+<header>
+    <h1>Git練習用ページ</h1>
+</header>
+<mein>
+    <nav>
+        <ul>
+            <a href="index.html"><li>バージョン管理システムとは</li></a>
+            <a href="git.html"><li>Gitの特徴</li></a>
+            <a href="github.html"><li>Githubとは</li></a>
+        </ul>
+    </nav>
+</mein>
 </body>
 </html>
