バージョン管理システムの説明を追加

--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
             <a href="github.html"><li>Githubとは</li></a>
         </ul>
     </nav>
+    <article>
+        <section>
+            <h1>バージョン管理システムとは</h1>
+            <ul>
+                <li>安心してファイルの変更ができる</li>
+            </ul>
+            <ul>
+                <li>前のバージョンに戻せる</li>
+                <li>差分が見られる</li>
+            </ul>
+            
+        </section>
+    </article>
 </mein>
 </body>
 </html>
